--- a/README
+++ b/README
@@ -17,10 +17,10 @@ Features:
 
 Prerequisites:
 
-* Lua 5.3 or higher
+* Lua >= 5.3
 * GNU libmagic (NOTE:  this is NOT image manipulation, but file
   identification)
-* LPEG 1.0.0 or higher
+* LPEG >= 1.0.0
 * A whole bunch of other Lua modules, available at:
         * https://github.com/spc476/lua-conmanorg
         * https://github.com/spc476/LPeg-Parsers
@@ -35,9 +35,8 @@ the server should just work.
 
 Bulding:
 
-Just type "make" (there's one C module that might be required, depending
-upon your desired configuration).  If you have the Lua include files in a
-non-standard location, you may need to do:
+Just type "make".  If you have the Lua include files in a non-standard
+location, you may need to do:
 
         make LUA_INCDIR=/path/to/Lua/includes
         
